# vouchspec

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ASSUMPTIONS.md  BACKLOG.md  BUDGET.csv  BUSINESS_PLAN.md  CHANGELOG.md  CHARTER.md  COMPLIANCE_CHECKLIST.md  COPYRIGHT.md  CRM.csv  CUSTOMER_FEEDBACK.md  DECISIONS.md  EXPERIMENTS.csv  GOAL.md  GOAL_EVIDENCE.md  HUMAN_ACTIONS.md  NEXT_ACTION.md  OFFER.md  PRICING.md  README.md  REVENUE.csv  RISK_REGISTER.md  STATE.json  STATUS.md  pyproject.toml  server.json  skills.sh.json
analytics/: README.md  dashboard.json  external-requests.csv  integrations.csv  orders.csv
backups/: README.md
catalog/: sources.json
deploy/: README.md
distribution/: discovery.json
docs/: mainnet-remedy-operations.md  methodology.md  payment-flow.md  refund-policy.md  stage-b-operations.md  stage-b-security-review.md
fulfillment/: README.md  stage-b-sandbox-proof.json
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
logs/: 2026-07-13-e001-verification.md  2026-07-13-initialization.md  2026-07-14-cdp-mainnet-provisioning.md  2026-07-14-stripe-http-test-probe.md  2026-07-14-stripe-test-probe.md  2026-07-14-x402-bazaar-launch.md  2026-07-15-commercial-launch.md  2026-07-15-domain-wallet-key-followup.md  2026-07-15-mainnet-commerce-launched.md  2026-07-15-mainnet-payto-configured.md
marketing/: README.md
product/: README.md
research/: README.md  agent-only-pricing-analysis-2026-07-14.md  discovery-registry-2026-07-14.md  independent-mvp-review.md  market-and-competitor-evidence.md  mvp-threat-model.md  payment-provider-decision-2026-07-14.md  standards-and-name-evidence.md
sops/: README.md  demand-experiment.md  local-validation-and-delivery.md
tests/: test_api.py  (+16 more)
(+106 files in other folders)
