[build-system]
requires = ["setuptools==80.9.0", "wheel==0.46.1"]
build-backend = "setuptools.build_meta"

[project]
name = "capabilityproof"
version = "0.2.0"
description = "VouchSpec exact-version signed evidence for public Agent Skills"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "VouchSpec" }]
dependencies = [
  "cryptography==49.0.0",
  "jsonschema==4.26.0",
  "mcp==1.28.1",
  "PyYAML==6.0.3",
  "stripe==15.3.0",
]

[project.optional-dependencies]
dev = [
  "jsonschema==4.26.0",
  "pytest==9.0.3",
]

[project.scripts]
capabilityproof = "capabilityproof.cli:main"
vouchspec = "capabilityproof.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
capabilityproof = ["schemas/*.json"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
